--- a/src/components/FoodPlaceList/Card/Images/FoodPlaceImages.scss
+++ b/src/components/FoodPlaceList/Card/Images/FoodPlaceImages.scss
@@ -79,6 +79,27 @@ $fullScreenImageHeight: 100%;
                 }
             }
         }
+
+        @media (max-width: 480px) {
+            width: 100%;
+            > .food-place-images-container {
+                width: 100%;
+                height: 200px;
+                > .food-place-images {
+                    width: 100%;
+                    height: 200px;
+                    > .food-place-image-container {
+                        width: 100%;
+                        height: 200px;
+                        > img {
+                            width: 100%;
+                            height: 200px;
+                            border-radius: 8px 8px 0 0;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
